# jagex-launcher-linux

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/: rsclient.desktop
src/: log.rs  main.rs  paths.rs  store.rs
src/auth/: jwt.rs  mod.rs  pkce.rs  session.rs  token.rs
src/clients/: mod.rs  osrs.rs  rs3.rs  runelite.rs
src/login/: mod.rs
src/ui/: app.rs  mod.rs
