[package]
name = "rsclient"
version = "0.1.0"
edition = "2024"
description = "A native Linux launcher for RuneScape 3, Old School RuneScape and RuneLite, using Jagex accounts"
license = "AGPL-3.0-or-later"

[dependencies]
# auth / http
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "json",
    "form",
    "gzip",
    "rustls",
    "rustls-native-certs",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
url = "2"
form_urlencoded = "1"

# client downloads / archive handling
ar = "0.9"
tar = "0.4"
xz2 = "0.1"
flate2 = "1"
hex = "0.4"

# ui
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.35"

# login window; needs the webkit2gtk-4.1 system package
wry = "0.55"
tao = "0.35"

# misc
anyhow = "1"
dirs = "6"
libc = "0.2"

[profile.release]
strip = true
lto = "thin"
